# internal/dtos/organizations.go
@@ -5,16 +5,16 @@ import "time"
 type CreateOrganizationRequest struct {
 	Name  string `json:"name" validate:"required,min=3,max=100"`
 	Email string `json:"email" validate:"required,email"`
-}
+} // @name CreateOrganizationRequest
 
 type UpdateOrganizationRequest struct {
 	Name  string `json:"name" validate:"required,min=3,max=100"`
 	Email string `json:"email" validate:"required,email"`
-}
+} // @name UpdateOrganizationRequest
 
 type OrganizationResponse struct {
 	ID        uint      `json:"id"`
 	Name      string    `json:"name"`
 	Email     string    `json:"email"`
 	CreatedAt time.Time `json:"created_at"`
-}
+} // @name OrganizationResponse
